fix responsive issue submit button not visible

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@
     src: url();
   }
 }
+@media (max-width: 640px) {
+  .quiz-container {
+    height: calc(100vh - 10rem);
+  }
+}
